hphp/test/slow/parser/use-strict.php.expectf
Fatal error: Strict mode is not supported for non-Hack files. in %s/test/slow/parser/use-strict.php on line 3